喔不 CSS 跟 JS 沒有載入

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <title>TxtConvert</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/index.css" rel="stylesheet">
     <!-- Tocas UI -->
     <link href="//cdnjs.cloudflare.com/ajax/libs/tocas-ui/2.3.3/tocas.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tocas-ui/2.3.3/tocas.js"></script>
@@ -12,8 +11,8 @@
     <!-- axios -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
     <!-- index -->
-    <link href="/index.css" rel="stylesheet">
-    <script src="/index.js"></script>
+    <link href="./index.css" rel="stylesheet">
+    <script src="./index.js"></script>
     <!-- Theme Color -->
     <meta name="theme-color" content="#3f51b5">
   </head>
@@ -26,7 +25,7 @@
         <input id="upload" type="file"><i class="upload symbol icon"></i><span class="header">載入資料</span><span class="description">將檔案拖拉至此處或是點擊此處來選取檔案。</span>
       </div>
       <div id="zhconvert"><a href="https://zhconvert.org/">本程式使用了繁化姬的 API 服務</a></div>
-      <div class="ts centered inline loader text indeterminate" id="loader"> </div>
+      <div class="ts centered inline loader text indeterminate" id="loader">正在將檔案發給小熊貓</div>
       <div id="download" style="display:none;"><a class="ts primary labeled icon button" download=""><i class="download icon"></i></a>
         <p>轉換完畢！</p>
       </div>
