新增檔案編碼轉換所需模組

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Tocas UI -->
     <link href="//cdnjs.cloudflare.com/ajax/libs/tocas-ui/2.3.3/tocas.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tocas-ui/2.3.3/tocas.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/tocas-ui/2.3.3/tocas.js"></script>
     <!-- JQ -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- axios -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+    <!-- 編碼轉換-->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jschardet/1.4.1/jschardet.min.js"></script>
+    <script src="//cdn.rawgit.com/inexorabletash/text-encoding/4d1b5456/lib/encoding-indexes.js"></script>
+    <script src="//cdn.rawgit.com/inexorabletash/text-encoding/4d1b5456/lib/encoding.js"></script>
     <!-- index -->
     <link href="./index.css" rel="stylesheet">
     <script src="./index.js"></script>
