--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
       </div>
       <div id="zhconvert"><a href="https://zhconvert.org/">本程式使用了繁化姬的 API 服務</a></div>
       <div class="ts centered inline loader text indeterminate" id="loader">正在將檔案發給小熊貓</div>
+      <div id="preview" style="display:none;">
+        <h3 class="ts header">預覽</h3>
+        <select class="ts basic fluid dropdown">
+          <option>始</option>
+          <option>春</option>
+          <option>延</option>
+          <option>期</option>
+        </select>
+        <pre class="ts top attached segment"></pre>
+        <div class="ts bottom attached fluid buttons">
+          <div class="ts primary button" data-start>開始轉換</div>
+        </div>
+      </div>
       <div id="download" style="display:none;"><a class="ts primary labeled icon button" download=""><i class="download icon"></i></a>
         <p>轉換完畢！</p>
       </div>
