--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="ts attached heading slate">
-      <div class="ts narrow container"><span class="header">TxtConvert 0.1</span><span class="description">轉換 txt 檔案</span></div>
+      <div class="ts narrow container"><span class="header">TxtConvert 1.0</span><span class="description">轉換 txt 檔案</span></div>
     </div>
     <div class="ts narrow container">
       <div class="ts basic dashed clickable slate no earlyspring" id="uploader">
@@ -32,11 +32,10 @@
       <div class="ts centered inline loader text indeterminate" id="loader">正在將檔案發給小熊貓</div>
       <div id="preview" style="display:none;">
         <h3 class="ts header">預覽</h3>
-        <select class="ts basic fluid dropdown">
-          <option>始</option>
-          <option>春</option>
-          <option>延</option>
-          <option>期</option>
+        <select class="ts basic fluid dropdown" id="encode">
+          <option>utf-8</option>
+          <option selected="selected">gbk</option>
+          <option>gb18030</option>
         </select>
         <pre class="ts top attached segment"></pre>
         <div class="ts bottom attached fluid buttons">
