新增多種轉換模式 更換繁化API HTML 新增 UTF-8 meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>TxtConvert</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
     <!-- Tocas UI -->
     <link href="//cdnjs.cloudflare.com/ajax/libs/tocas-ui/2.3.3/tocas.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/tocas-ui/2.3.3/tocas.js"></script>
@@ -10,10 +11,6 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- axios -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
-    <!-- 編碼轉換-->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jschardet/1.4.1/jschardet.min.js"></script>
-    <script src="//cdn.rawgit.com/inexorabletash/text-encoding/4d1b5456/lib/encoding-indexes.js"></script>
-    <script src="//cdn.rawgit.com/inexorabletash/text-encoding/4d1b5456/lib/encoding.js"></script>
     <!-- index -->
     <link href="./index.css" rel="stylesheet">
     <script src="./index.js"></script>
@@ -22,7 +19,7 @@
   </head>
   <body>
     <div class="ts attached heading slate">
-      <div class="ts narrow container"><span class="header">TxtConvert 1.0</span><span class="description">轉換 txt 檔案</span></div>
+      <div class="ts narrow container"><span class="header">TxtConvert 1.1</span><span class="description">轉換 txt 檔案</span></div>
     </div>
     <div class="ts narrow container">
       <div class="ts basic dashed clickable slate no earlyspring" id="uploader">
